Feat/slide toggle (#57)
* feat: 1. component slide toggle 2. component demo for slide toggle

* refactor: path refactor

* feat: unit test added

* refactor: removed empty onInits

* refactor: demo changed to 2 column format + added proprty width 50% of column in demo-group

* refactor: added file whith custom material theme

* refactor: code cleaning

* fix: test on black theme fixed after changing toggle classes

* refactor: input on enum status added with boolean getter on it, gendalf-theme .scss moved to root

Co-authored-by: Artur Makaranka <artur_makaranka@epam.com>

--- a/frontend/src/app/libs/common-components-demo/demo-group/demo-group.component.scss
+++ b/frontend/src/app/libs/common-components-demo/demo-group/demo-group.component.scss
@@ -3,10 +3,12 @@
   flex-flow: row nowrap;
 
   &__container {
+    padding: 72px 2%;
     box-sizing: border-box;
     width: 50%;
     min-width: 500px;
     padding: 55px 2%;
+
 
     &--light-theme {
       & .demo-group__title {
