--- a/frontend/src/app/libs/common-components/shared/variables.scss
+++ b/frontend/src/app/libs/common-components/shared/variables.scss
@@ -1,10 +1,3 @@
-@mixin text-view($font-family, $font-size, $letter-spacing, $line-height) {
-    font-family: $font-family;
-    font-size: $font-size;
-    letter-spacing: $letter-spacing;
-    line-height: $line-height;
-}
-
 // grid
 $main-grid-unit: 8px;
 $secondary-grid-unit: 4px;
@@ -45,34 +38,58 @@ $font-main-bold: 'Roboto Bold';
 $font-main-regular: 'Roboto Regular';
 $font-main-medium: 'Roboto Medium';
 // typography styles
-.text-h1 {
-    @include text-view($font-main-bold, 48px, 0, 56px);
+@mixin text-h1() {
+    font-family: $font-main-bold;
+    font-size: 48px;
+    letter-spacing: 0;
+    line-height: 56px;
 }
 
-.text-h2 {
-    @include text-view($font-main-bold, 32px, 0, 40px);
+@mixin text-h2() {
+    font-family: $font-main-bold;
+    font-size: 32px;
+    letter-spacing: 0;
+    line-height: 40px;
 }
 
-.text-h3 {
-    @include text-view($font-main-bold, 24px, 0, 28px);
+@mixin text-h3() {
+    font-family: $font-main-bold;
+    font-size: 24px;
+    letter-spacing: 0;
+    line-height: 28px;
 }
 
-.text-h4 {
-    @include text-view($font-main-medium, 14px, 1px, 16px);
+@mixin text-h4() {
+    font-family: $font-main-medium;
+    font-size: 14px;
+    letter-spacing: 1px;
+    line-height: 16px;
 }
 
-.text-p {
-    @include text-view($font-main-bold, 14px, 0, 24px);
+@mixin text-p() {
+    font-family: $font-main-bold;
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: 24px;
 }
 
-.text-p-bold {
-    @include text-view($font-main-bold, 14px, 0, 24px);
+@mixin text-p-bold() {
+    font-family: $font-main-bold;
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: 24px;
 }
 
-.text-small {
-    @include text-view($font-main-regular, 12px, 0, 16px);
+@mixin text-small() {
+    font-family: $font-main-regular;
+    font-size: 12px;
+    letter-spacing: 0;
+    line-height: 16px;
 }
 
-.text-small-bold {
-    @include text-view($font-main-bold, 12px, 0, 16px);
+@mixin text-small-bold() {
+    font-family: $font-main-bold;
+    font-size: 12px;
+    letter-spacing: 0;
+    line-height: 16px;
 }
