fix: border of scrollbar demo is not pretty

--- a/frontend/src/app/libs/common-components-demo/components/scrollbar-demo/scrollbar-demo.component.scss
+++ b/frontend/src/app/libs/common-components-demo/components/scrollbar-demo/scrollbar-demo.component.scss
@@ -4,7 +4,7 @@
     height: 300px;
     overflow: scroll;
 
-    border: 1px solid black;
+    border: 1px solid gray;
 
     &--dark-theme {
       border-color: rgba(255, 255, 255, 0.5);
