--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 :host {
   box-sizing: border-box;
 
@@ -12,5 +14,5 @@
 .content {
   text-align: center;
 
-  background-color: #c4c4c4;
+  background-color: $color-black-30;
 }
