--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -2,4 +2,5 @@
 	<app-event-tile-demo></app-event-tile-demo>
 	<app-slide-toggle-demo></app-slide-toggle-demo>
 	<app-button-demo></app-button-demo>
+	<app-popover-common-demo></app-popover-common-demo>
 </div>
