--- a/frontend/src/gendalf-theme.scss
+++ b/frontend/src/gendalf-theme.scss
@@ -1,14 +1,52 @@
 @import '~@angular/material/theming';
+@import './app/libs/common-components/shared/variables.scss';
+
+$mat-gendalf: (
+  50: #e3f2fd,
+  100: #bbdefb,
+  200: #90caf9,
+  300: #64b5f6,
+  400: #42a5f5,
+  500: $color-primary,
+  600: #1e88e5,
+  700: #1976d2,
+  800: #1565c0,
+  900: #0d47a1,
+  A100: #82b1ff,
+  A200: #448aff,
+  A400: #2979ff,
+  A700: #2962ff,
+  contrast: (
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $light-primary-text,
+    400: $light-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $light-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text,
+  )
+);
 
 @include mat-core();
 
-$gendalf-app-primary: mat-palette($mat-deep-purple);
+
+$gendalf-app-primary: mat-palette($mat-gendalf);
 $gendalf-app-accent: mat-palette($mat-pink, A200, A100, A400);
 $gendalf-app-warn: mat-palette($mat-red);
 
 $gendalf-app-theme: mat-light-theme($gendalf-app-primary, $gendalf-app-accent, $gendalf-app-warn);
 
 @include angular-material-theme($gendalf-app-theme);
+
+
+
 
 .mat-slide-toggle-bar {
     background-color: rgba(33, 33, 33, 0.5);
@@ -22,4 +60,9 @@ $gendalf-app-theme: mat-light-theme($gendalf-app-primary, $gendalf-app-accent, $
     .mat-slide-toggle-bar {
         background-color: rgba(255, 255, 255, 0.3);
     }
+}
+
+.gendalf-dialog-dark .mat-dialog-container{
+  background:linear-gradient(0deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), $color-black; 
+  color: #fff;
 }
