feat: add scrollbar directive

--- a/frontend/src/app/libs/common-components-demo/components/scrollbar-demo/scrollbar-demo.component.scss
+++ b/frontend/src/app/libs/common-components-demo/components/scrollbar-demo/scrollbar-demo.component.scss
@@ -4,7 +4,7 @@
   &__container {
     width: 400px;
     height: 300px;
-    overflow: scroll;
+    overflow: auto;
 
     border: 1px solid $color-black-50;
 
