--- a/frontend/src/app/libs/common-components/components/popover/popover.scss
+++ b/frontend/src/app/libs/common-components/components/popover/popover.scss
@@ -3,9 +3,9 @@
 .popover--dark .mat-dialog-container {
   background: linear-gradient(
       0deg,
-      rgba(255, 255, 255, 0.1),
-      rgba(255, 255, 255, 0.1)
+      $color-white-10,
+      $color-white-10
     ),
     $color-black;
-  color: #fff;
+  color: $color-white;
 }
