--- a/frontend/src/app/libs/common-components/create-draft-event-popover/create-draft-event-popover.component.scss
+++ b/frontend/src/app/libs/common-components/create-draft-event-popover/create-draft-event-popover.component.scss
@@ -1,6 +1,8 @@
+@import "../shared/variables.scss";
+
 .event-popover {
     
-    background-color: white;
+    background-color:$color-white;
 
     &__title-field {
         width: 25rem;
@@ -11,7 +13,7 @@
     }
     &__btn {
         border: none;
-        color: grey;
+        color: $color-black-50;
         text-transform: uppercase;
     }
 }
