--- a/frontend/src/gendalf-theme.scss
+++ b/frontend/src/gendalf-theme.scss
@@ -49,15 +49,15 @@ $gendalf-app-theme: mat-light-theme(
 @include angular-material-theme($gendalf-app-theme);
 
 .mat-slide-toggle-bar {
-  background-color: rgba(33, 33, 33, 0.5);
+  background-color: $color-black;
 }
 
 .mat-slide-toggle-bar-dark {
-  color: #fff;
+  color: $color-white;
 
   @include mat-slide-toggle-theme($gendalf-app-theme);
 
   .mat-slide-toggle-bar {
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: $color-white-30;
   }
 }
