refactor: tab war p

--- a/frontend/src/app/libs/common-components/components/popover/popover.scss
+++ b/frontend/src/app/libs/common-components/components/popover/popover.scss
@@ -1,4 +1,4 @@
-@import "../../shared/variables.scss";
+@import "variables";
 
 .popover--dark .mat-dialog-container {
   background: linear-gradient(
