--- a/frontend/src/gendalf-theme.scss
+++ b/frontend/src/gendalf-theme.scss
@@ -1,5 +1,5 @@
 @import "~@angular/material/theming";
-@import "./app/libs/common-components/shared/variables.scss";
+@import "variables";
 
 $mat-gendalf: (
   50: #e3f2fd,
