--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -3,5 +3,6 @@
 	<app-slide-toggle-demo></app-slide-toggle-demo>
 	<app-button-demo></app-button-demo>
 	<app-scrollbar-demo></app-scrollbar-demo>
+	<app-radio-button-demo></app-radio-button-demo>
 </div>
 
