--- a/frontend/src/app/libs/common-components/shared/variables.scss
+++ b/frontend/src/app/libs/common-components/shared/variables.scss
@@ -34,9 +34,9 @@ $color-white-30: rgba($color-white, .30);
 $color-white-10: rgba($color-white, .10);
 $color-white-5: rgba($color-white, .05);
 // typography
-$font-main-bold: 'Roboto Bold';
-$font-main-regular: 'Roboto Regular';
-$font-main-medium: 'Roboto Medium';
+$font-main-bold: 'Roboto Bold', sans-serif;
+$font-main-regular: 'Roboto Regular', sans-serif;
+$font-main-medium: 'Roboto Medium', sans-serif;
 // typography styles
 @mixin text-h1() {
     font-family: $font-main-bold;
@@ -67,7 +67,7 @@ $font-main-medium: 'Roboto Medium';
 }
 
 @mixin text-p() {
-    font-family: $font-main-bold;
+    font-family: $font-main-regular;
     font-size: 14px;
     letter-spacing: 0;
     line-height: 24px;
