--- a/frontend/src/gendalf-theme.scss
+++ b/frontend/src/gendalf-theme.scss
@@ -1,25 +1,29 @@
 @import '~@angular/material/theming';
+@import 'md-palette';
 
 @include mat-core();
 
-$gendalf-app-primary: mat-palette($mat-deep-purple);
-$gendalf-app-accent: mat-palette($mat-pink, A200, A100, A400);
-$gendalf-app-warn: mat-palette($mat-red);
+$gendalf-app-primary: mat-palette($md-primary-palette);
+$gendalf-app-accent: mat-palette($md-yellow-palette);
+$gendalf-app-warn: mat-palette($md-error-palette);
 
 $gendalf-app-theme: mat-light-theme($gendalf-app-primary, $gendalf-app-accent, $gendalf-app-warn);
 
 @include angular-material-theme($gendalf-app-theme);
 
-.mat-slide-toggle-bar {
-    background-color: rgba(33, 33, 33, 0.5);
+$gendalf-app-theme-dark: mat-dark-theme($gendalf-app-primary, $gendalf-app-accent, $gendalf-app-warn);
+
+.radio-button--dark-theme {
+	@include mat-radio-theme ($gendalf-app-theme-dark);
 }
 
 .mat-slide-toggle-bar-dark {
-    color: #fff;
+	color: #fff;
 
-    @include mat-slide-toggle-theme ($gendalf-app-theme);
+	@include mat-slide-toggle-theme ($gendalf-app-theme-dark);
 
-    .mat-slide-toggle-bar {
-        background-color: rgba(255, 255, 255, 0.3);
-    }
+	.mat-slide-toggle-bar {
+			background-color: rgba(255, 255, 255, 0.3);
+	}
 }
+
