--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -21,4 +21,5 @@
 
 
 html, body { height: 100%; }
-body { margin: 0; font-family: $font-main-regular, sans-serif; }
+body { margin: 0; font-family: $font-main-regular; }
+
