--- a/frontend/src/app/libs/common-components-demo/components/popover-demo/popover-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/popover-demo/popover-demo.component.html
@@ -1,4 +1,4 @@
-<app-demo-group class="button-demo" [title]="'Common Popover'">
+<app-demo-group class="button-demo" [title]="'Popups'">
 	<div class="light-theme button-demo__states">
 		<app-popover #templatepopover>
 			<div class="popover-title">
@@ -13,9 +13,9 @@
 		</app-popover>
 		<div class="button-demo__active">
 			<app-demo-state [title]="'light'" class="button-demo__container">
-				<app-button type="flat" (click)="templatepopover.open()"
-					>Button</app-button
-				>
+				<app-button type="flat" (click)="templatepopover.open()">
+					Open
+				</app-button>
 			</app-demo-state>
 		</div>
 	</div>
@@ -40,9 +40,9 @@
 				<app-button
 					type="flat"
 					[theme]="darkTheme"
-					(click)="templatepopoverdark.open()"
-					>Button</app-button
-				>
+					(click)="templatepopoverdark.open()">
+					Open
+				</app-button>
 			</app-demo-state>
 		</div>
 	</div>
