refactor: code clearning

--- a/frontend/src/app/libs/common-components-demo/components/popover-demo/popover-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/popover-demo/popover-demo.component.html
@@ -35,8 +35,7 @@
 			<app-demo-state
 				[title]="'darks'"
 				class="button-demo__container"
-				[isDark]="true"
-			>
+				[isDark]="true">
 				<app-button
 					type="flat"
 					[theme]="darkTheme"
