feat: common popover with demo (#62)
* feat: common popover with demo

* fix: 1st test on component creating fixed

* refactor: 1. code clearning 2. rename of component - remove common

* refactor: tab war

* refactor: tab war p2

* feat: tests added

* refactor: tab war p

* refactor: tab war p4

* refactor: white space in tests removed

* refactor: tab war p5

* refactor: rename button in demo

* refactor: code clearning

* refactor: tabs addet to component module

* refactor: tab to providers

Co-authored-by: Artur Makaranka <artur_makaranka@epam.com>

--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -2,6 +2,7 @@
 	<app-event-tile-demo></app-event-tile-demo>
 	<app-slide-toggle-demo></app-slide-toggle-demo>
 	<app-button-demo></app-button-demo>
+	<app-popover-demo></app-popover-demo>
 	<app-scrollbar-demo></app-scrollbar-demo>
 </div>
 
