feat: add radio-group

--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -4,7 +4,7 @@
 	<app-button-demo></app-button-demo>
 	<app-popover-demo></app-popover-demo>
 	<app-scrollbar-demo></app-scrollbar-demo>
-	<app-radio-button-demo></app-radio-button-demo>
+	<app-radio-group-demo></app-radio-group-demo>
 </div>
 
 
