--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -4,5 +4,5 @@
 	<app-button-demo></app-button-demo>
 	<app-popover-demo></app-popover-demo>
 	<app-scrollbar-demo></app-scrollbar-demo>
+	<app-radio-group-demo></app-radio-group-demo>
 </div>
-
