--- a/frontend/src/app/libs/common-components/components/button/button.component.scss
+++ b/frontend/src/app/libs/common-components/components/button/button.component.scss
@@ -7,8 +7,8 @@
 
 .button {
   display: inline-flex;
-  align-items: center;
-  width: 92.5px;
+	align-items: center;
+	justify-content: center;
   height: 40px;
 
   font-weight: 500;
