--- a/frontend/src/gendalf-theme.scss
+++ b/frontend/src/gendalf-theme.scss
@@ -1,63 +1,44 @@
-@import "~@angular/material/theming";
-@import "variables";
-
-$mat-gendalf: (
-	50: #e3f2fd,
-	100: #bbdefb,
-	200: #90caf9,
-	300: #64b5f6,
-	400: #42a5f5,
-	500: $color-primary,
-	600: #1e88e5,
-	700: #1976d2,
-	800: #1565c0,
-	900: #0d47a1,
-	A100: #82b1ff,
-	A200: #448aff,
-	A400: #2979ff,
-	A700: #2962ff,
-	contrast: (
-		50: $dark-primary-text,
-		100: $dark-primary-text,
-		200: $dark-primary-text,
-		300: $light-primary-text,
-		400: $light-primary-text,
-		500: $light-primary-text,
-		600: $light-primary-text,
-		700: $light-primary-text,
-		800: $light-primary-text,
-		900: $light-primary-text,
-		A100: $dark-primary-text,
-		A200: $light-primary-text,
-		A400: $light-primary-text,
-		A700: $light-primary-text,
-	),
-);
+@import '~@angular/material/theming';
+@import 'md-palette';
+@import 'variables';
 
 @include mat-core();
 
-$gendalf-app-primary: mat-palette($mat-gendalf);
-$gendalf-app-accent: mat-palette($mat-pink, A200, A100, A400);
-$gendalf-app-warn: mat-palette($mat-red);
+$gendalf-app-primary: mat-palette($md-primary-palette);
+$gendalf-app-accent: mat-palette($md-yellow-palette);
+$gendalf-app-warn: mat-palette($md-error-palette);
 
 $gendalf-app-theme: mat-light-theme(
 	$gendalf-app-primary,
 	$gendalf-app-accent,
 	$gendalf-app-warn
 );
-
+// DEFAULT LIGHT THEMING
 @include angular-material-theme($gendalf-app-theme);
 
-.mat-slide-toggle-bar {
-	background-color: $color-black;
+// DARK THEMING
+$gendalf-app-theme-dark: mat-dark-theme($gendalf-app-primary, $gendalf-app-accent, $gendalf-app-warn);
+
+.radio-group__radio-button--dark-theme {
+	@include mat-radio-theme ($gendalf-app-theme-dark);
+	&.mat-radio-disabled {
+		& .mat-radio-inner-circle {
+			background-color: $color-white-30;
+		}
+		&.mat-radio-checked .mat-radio-outer-circle,
+		.mat-radio-outer-circle {
+			border-color: $color-white-30;
+		}
+	}
 }
 
 .mat-slide-toggle-bar-dark {
 	color: $color-white;
 
-	@include mat-slide-toggle-theme($gendalf-app-theme);
+	@include mat-slide-toggle-theme($gendalf-app-theme-dark);
 
 	.mat-slide-toggle-bar {
 		background-color: $color-white-30;
 	}
 }
+
