feat: demo input component added

--- a/frontend/src/app/libs/common-components/components/input/input.component.html
+++ b/frontend/src/app/libs/common-components/components/input/input.component.html
@@ -1,1 +1,6 @@
-<p>input works!</p>
+<mat-form-field class="1">
+	<mat-label>bind1</mat-label>
+	<input matInput type="text" formControlName="bind2" placeholder="bind3">
+
+</mat-form-field>
+  
