--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -10,17 +10,27 @@
 }
 
 @font-face {
-  font-family: 'Roboto Regular';
-  src: url('./assets/fonts/Roboto-Regular.ttf');
-  font-weight: normal;
-}
-
-@font-face {
   font-family: 'Roboto Medium';
   src: url('./assets/fonts/Roboto-Medium.ttf');
   font-weight: 500;
 }
 
+@font-face {
+  font-family: 'Roboto Regular';
+  src: url('./assets/fonts/Roboto-Regular.ttf');
+  font-weight: normal;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: $font-main-regular; }
 
+strong, b {
+	font-family: "Roboto Bold";
+	font-weight: normal;
+}
+
+small {
+	font-size: 12px;
+	line-height: 16px;
+	letter-spacing: 0;
+}
