fix: h4 must be uppercased

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -24,6 +24,10 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: $font-main-regular; }
 
+h4 {
+	text-transform: uppercase;
+}
+
 strong, b {
 	font-family: "Roboto Bold";
 	font-weight: normal;
