--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,6 +1,5 @@
-@import "./app/libs/common-components/components/popover/popover.scss";
-
 /* You can add global styles to this file, and also import other style files */
+@import "reset";
 @import "scrollbar";
 
 @font-face {
@@ -19,22 +18,4 @@
   font-family: 'Roboto Regular';
   src: url('./assets/fonts/Roboto-Regular.ttf');
   font-weight: normal;
-}
-
-html, body { height: 100%; }
-body { margin: 0; font-family: $font-main-regular; }
-
-h4 {
-	text-transform: uppercase;
-}
-
-strong, b {
-	font-family: "Roboto Bold";
-	font-weight: normal;
-}
-
-small {
-	font-size: 12px;
-	line-height: 16px;
-	letter-spacing: 0;
 }
