--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,5 @@
 @import "./app/libs/common-components/components/popover/popover.scss";
+@import "./app/libs/common-components/components/input/input-material.scss";
 
 /* You can add global styles to this file, and also import other style files */
 @import "scrollbar";
