--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -1,4 +1,5 @@
 <div class="common-components-demo">
+	<app-tabs-demo></app-tabs-demo>
 	<app-typography-demo></app-typography-demo>
 	<app-event-tile-demo></app-event-tile-demo>
 	<app-slide-toggle-demo></app-slide-toggle-demo>
