--- a/frontend/src/app/libs/common-components-demo/components/input-demo/input-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/input-demo/input-demo.component.html
@@ -14,7 +14,7 @@
 				<app-input [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" [defaultValue]="'some@email.ru'"></app-input>
 			</app-demo-state>
 
-			<app-demo-state [title]="'error'" [isDark]="false">
+			<app-demo-state [title]="'Password'" [isDark]="false">
 				<app-input [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" ></app-input>
 				<app-input [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" [defaultValue]="'somepassword'"></app-input>
 				<app-input [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" [hide]="false" [defaultValue]="'somepassword'"></app-input>
@@ -36,7 +36,7 @@
 				<app-input [inputType]="'email'" [theme]="darkTheme" [label]="'Your email'" [placeholder]="'Your placeholder'" [defaultValue]="'some@email.ru'"></app-input>
 			</app-demo-state>
 
-			<app-demo-state [title]="'error'" [isDark]="true">
+			<app-demo-state [title]="'Password'" [isDark]="true">
 				<app-input [inputType]="'password'" [theme]="darkTheme" [label]="'Your password'" [placeholder]="'Your placeholder'" ></app-input>
 				<app-input [inputType]="'password'" [theme]="darkTheme" [label]="'Your password'" [placeholder]="'Your placeholder'" [defaultValue]="'somepassword'"></app-input>
 				<app-input [inputType]="'password'" [theme]="darkTheme" [label]="'Your password'" [placeholder]="'Your placeholder'" [hide]="false" [defaultValue]="'somepassword'"></app-input>
