--- a/frontend/src/app/libs/common-components/shared/variables.scss
+++ b/frontend/src/app/libs/common-components/shared/variables.scss
@@ -18,6 +18,7 @@ $color-coral: #FF8A65;
 $color-black: #212121;
 $color-white: #FFFFFF;
 // blacks
+$color-black-medium-emphasis: rgba(0, 0, 0, .6);
 $color-black-100: rgba($color-black, 100);
 $color-black-95: rgba($color-black, .95);
 $color-black-75: rgba($color-black, .75);
